--- a/src/features/tasks/TasksMain.css
+++ b/src/features/tasks/TasksMain.css
@@ -49,8 +49,9 @@
 	margin-top: 1rem;
 }
 
-.tasks-details {
+.tasks-details.row {
 	text-align: left;
+	margin: 1rem 0;
 }
 
 .tasks-details > .col {
